# newbot

./: .gitignore  README.md
scripts/: enable_realvnc_direct_tcp.sh  git_sync_push.sh  install_orangepi_board.sh  install_realvnc_server.sh  install_rosbridge_systemd.sh  install_snapshot_2026-04-04.sh  newbot_status_tui.py  rosbridge-websocket.service  run_rosbridge_websocket.sh
src/audio/launch/: audio.launch
src/audio/scripts/: emoji.py  main.py  music.py  network.py  pyqt.py  record.py  yaml_cfg.py
src/base_control/cfg/: Base.cfg  Base_old.cfg
src/base_control/launch/: base_control.launch
src/base_control/src/: base_control.cpp  base_control.h
src/config/: install.sh  install_only_code.sh  rc.local  rk3566-orangepi-3b-v2-edit-fan.dts  rk3566-orangepi-3b-v2-raw.dtb  rk3566-orangepi-3b-v2.dtb  robot_env.example  start.sh
src/img_pipeline/img_decode/: RGA_MPP_硬解码链路调试报告.md
src/img_pipeline/img_rectify/: CMakeLists.txt  package.xml
src/img_pipeline/object_track/: CMakeLists.txt
src/lidar_sensors/m1c1_mini/: CMakeLists.txt  package.xml
src/pkg_launch/: package.xml
src/snowboy_wakeup/: CMakeLists.txt  package.xml
src/usb_voice_cmd/: CMakeLists.txt  package.xml  requirements.txt
src/usb_voice_cmd/launch/: usb_voice_cmd.launch
src/usb_voice_cmd/scripts/: download_vosk_model_cn.py  usb_voice_cmd_node.py
src/wakeup_process/: CMakeLists.txt  package.xml
src/wakeup_process/cfg/: ASR_ID_ROSTOPIC.md  asr.cfg
src/wakeup_process/launch/: wakeup_process.launch
src/wakeup_process/src/: asr.cpp  asr.h  wakeup_process.cpp  wakeup_process.h
(+69 files in other folders)
